# FLM

./: client.py  dataProcessing.py  fedbuff_results.json  hybrid_experiment_results.json  model.py  plot.py  pyproject.toml  server.py  strategy.py
FedAvg_Synchronous/: FedAvg_Synchronous.ipynb  client.py  dataProcessing.py  experiment_results.json  experiments.py  model.py  train.py
src/: experiments.py  train.py
src-deprecated/: fedSA_hybrid.py  fedbuff_async.py  fedbuff_cols.txt  fedbuff_model.pth  fedbuff_scaler.npy  temp.txt
